--- a/zadania/2/styl.css
+++ b/zadania/2/styl.css
@@ -15,21 +15,22 @@ body {
     background:  #8CE1AE;
     height: 600px;
     width: 40%;
-    float: left;
 }
 
 #center {
     background: #5CCB89;
     height: 600px;
     width: 40%;
-    float: left;
 }
 
 #right {
     background:  #1DA956;
     height: 600px;
     width: 20%;
-    float: left;
+}
+
+#container {
+    display: flex;
 }
 
 a {
