--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
-    background: url('bg.png') no-repeat center;
+    background: url('./img/bg.png') no-repeat center;
     background-size: cover;
     font-family: 'Press Start 2P', cursive;
 }
@@ -51,6 +51,10 @@ body {
     font-size: 3em;
 }
 
+.navbar__list-tasks {
+    font-size: 2em;
+}
+
 .navbar__element .link {
     text-decoration: none;
     text-shadow: 2px 2px white, -2px -2px #000;
@@ -74,6 +78,10 @@ body {
     color: #7b6db1;
 }
 
+.link-back {
+    color: #222 !important;
+}
+
 .navbar__element .link:hover {
     text-decoration: none;
     text-shadow: -2px -2px white, 2px 2px #000;
@@ -92,13 +100,13 @@ body {
 }
 
 @media only screen and (max-width: 1400px)  {
-    .navbar__list {  
+    .navbar__list {
         font-size: 2em;
     }
 }
 
 @media only screen and (max-width: 1000px)  {
-    .navbar__list {  
+    .navbar__list {
         font-size: 1.5em;
     }
 }
